--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@hookform/resolvers": "^3.1.0",
         "@react-google-maps/api": "^2.18.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -21,7 +22,8 @@
         "react-text-mask": "^5.5.0",
         "sass": "^1.60.0",
         "swiper": "^9.2.0",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^1.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
