--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@hookform/resolvers": "^3.1.0",
         "@react-google-maps/api": "^2.18.1",
+        "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
         "react-hook-form": "^7.43.9",
         "react-input-mask": "^2.0.4",
         "react-phone-number-input": "^3.2.19",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.10.0",
         "react-scripts": "^5.0.1",
         "react-simple-star-rating": "^5.1.7",
