--- a/client/package.json
+++ b/client/package.json
@@ -3,25 +3,32 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@hookform/resolvers": "^3.1.0",
         "@react-google-maps/api": "^2.18.1",
+        "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.5",
         "google-map-react": "^2.2.0",
+        "hamburger-react": "^2.5.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-file-base64": "^1.0.3",
+        "react-file-image-to-base64": "^1.0.1",
         "react-hook-form": "^7.43.9",
         "react-input-mask": "^2.0.4",
         "react-phone-number-input": "^3.2.19",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.10.0",
         "react-scripts": "^5.0.1",
         "react-simple-star-rating": "^5.1.7",
         "react-text-mask": "^5.5.0",
         "sass": "^1.60.0",
         "swiper": "^9.2.0",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^1.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
